fix mobile view on small phones

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -256,7 +256,7 @@
   }
 
   .site-title {
-    min-width: 375px;
+    min-width: 275px;
   }
 
   .github-star-badge {
